<resources>
    <string name="app_name">nutraWEB d2d cosmetics</string>
    <string name="login_country_code">Country Code</string>
    <string name="login_phone_number">Phone Number</string>
    <string name="login_button">get Verification code</string>
    <string name="login_placeholder_country_code">ex: Brazil is 55</string>
    <string name="error_message">Please Digit a Phone Number</string>
    <string name="invalid_phone_number">The number format is invalid</string>
    <string name="snack_login_confirm_message">The number is Correct?</string>
    <string name="snack_login_confirm">Confirm</string>
    <string name="snack_confirm_send">Your Number was send!</string>
    <string name="desc_firebase_lockup" />
    <string name="phone_title_text">Auth</string>
    <string name="signed_out">bye</string>
    <string name="status_verification_succeeded">Sucesso!!</string>
    <string name="instant_validation">Instant Validation</string>
    <string name="status_sign_in_failed">Login has failed!</string>
    <string name="status_verification_failed">Cerification Failed</string>
    <string name="status_code_sent">codigo enviado</string>
    <string name="signed_in">entrou</string>
    <string name="firebase_status_fmt">Autenticated User</string>
    <string name="key_verify_msg">key_verify_in_progress</string>
    <string name="firebase_quota_exced">Quota exceeded</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="snack_login_failed">Login failed</string>
    <string name="firebase_user_null">User is null</string>
    <string name="title_activity_new_order">NewOrderActivity</string>
    <string name="menu_title">Title</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="product_image">Product Image</string>
    <string name="error_loading_data">Error loading data!</string>
    <string name="menu_image">Menu item</string>
    <string name="title_activity_customer">Customer</string>
    <string name="title_activity_stock">StockActivity</string>
    <string name="title_activity_add_stock">AddStockActivity</string>
    <string name="add_stock_title">Add Items on Stock</string>
    <string name="title_new_order">New Sale</string>
    <string name="title_add_stock">Add Item on Stock</string>
    <string name="title_customer">Customers</string>
    <string name="title_activity_customer_add">CustomerAddActivity</string>
    <string name="title_activity_sales_add">SalesDashBoardActivity</string>
    <string name="add_customer_title">ADD CUSTOMER</string>
    <string name="title_add_customer">Add Customer</string>
    <string name="sales_sell_toolbar">New Sale</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="title_Add_Item_Stock">Add Item to Stock</string>
    <string name="select_qty">Select amount itens to add</string>
    <string name="initial_quantity_value">0</string>
    <string name="quantity">quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="total_products">Total</string>
    <string name="total_products_value">0</string>
    <string name="price_textView_value">0</string>
    <string name="addedItem">Item added to stock!</string>
    <string name="addedItemNoQty">Please select item quanti!!ty</string>
    <string name="the_item_is_on_stock">The item is already on stock!</string>
    <string name="title_stoc_list_detail">My Stock</string>
    <string name="title_list_stock">My Stock</string>
    <string name="user_add_txt_name">Name</string>
    <string name="user_add_txt_phone">Phone</string>
    <string name="user_add_txt_email">Email</string>
    <string name="the_user_already_exist">The User already exist!!</string>
    <string name="addedUser">User added!!!</string>
    <string name="user_add_please_fill_all_fields">Please fill all fields</string>
    <string name="total_sale">0</string>
    <string name="cifer">$</string>
    <string name="email_subject">Thanx for Your Order Number: </string>
    <string name="email_total">TOTAL : $ </string>
    <string name="email_format">$</string>
    <string name="title_activity_rank_user">CustomerRankActivity</string>
    <string name="rank_text">orders</string>
    <string name="title_rank_user">Rank Users</string>
    <string name="sale_instruction">Select an user then click on products to add itens on sale!</string>
    <string name="sale_validate">There is no itens to sale</string>
    <string name="title_activity_sales_history">SalesHistoryActivity</string>
    <string name="title_sales_hist">History</string>
    <string name="sales_hist_money_prefix">$</string>
    <string name="sales_hist_number_prefix">Order Number :</string>
    <string name="customer_add_name">Enter a user name</string>
    <string name="customer_add_phone">Enter a Phone number</string>
    <string name="customer_add_email">Enter an email</string>
    <string name="sale_sell_finish_order">Finish the sell</string>
    <string name="product_detail_add_to_stock">Add item to stock</string>
    <string name="appwidget_text">sales</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_qty">0</string>
</resources>
