
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nutraweb.jomar.capstone02.ui.CustomerAddActivity"
    tools:showIn="@layout/activity_customer_add">


    <EditText
        android:id="@+id/addCustomerEditTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/customer_add_name"
        android:hint="@string/user_add_txt_name"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/addCustomerEditTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCustomerEditTextName"
        android:contentDescription="@string/customer_add_phone"
        android:hint="@string/user_add_txt_phone"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/addCustomerEditTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCustomerEditTextPhone"
        android:contentDescription="@string/customer_add_email"
        android:hint="@string/user_add_txt_email"
        tools:ignore="ContentDescription" />
</android.support.constraint.ConstraintLayout>