<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            style="@style/ThemeOverlay.FirebaseIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/firebase_lockup_400"
            android:contentDescription="@string/desc_firebase_lockup"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/login_country_code" />

    <EditText
        android:id="@+id/countryCode"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        tools:text="@string/login_placeholder_country_code"

        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/login_phone_number" />

    <EditText
        android:id="@+id/phoneNumber"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        tools:ignore="LabelFor" />


    <Button
        android:id="@+id/getVerificationButton"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/login_button"/>
</LinearLayout>
